ags (2.2.23)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: improved replacing hard-coded font
	* refactored AgsDial to use PangoLayout

ags (2.2.22)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsNotationEditor to use GUI scale factor
	* implemented AgsWaveEditor to use GUI scale factor
	* implemented AgsAutomationEditor to use GUI scale factor
	* implemented AgsRuler properties
	* implemented AgsFFPlayer to use GUI scale factor
	* improved AgsCellPattern to use GUI scale factor

ags (2.2.21)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsCellPattern and AgsPatternBox to use GUI scale factor
	* implemented GtkVScrollbar and GtkHScrollbar to GUI scale using slider-width and stepper-size
	* implemented GtkVScale and GtkHScale to GUI scale using slider-width

ags (2.2.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented GUI scale factor
	* implemented AgsIndicator properties
	* implemented AgsDial properties
	* improved ags_vindicator_draw() and ags_hindicator_draw() to use properties
	* improved ags_dial_draw() properties

ags (2.2.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented instance access from LV2UI
	* minor improvements

ags (2.2.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_lv2ui_plugin_test_flags(), ags_lv2ui_plugin_set_flags() and ags_lv2ui_plugin_get_flags()
	* implemented ags_base_plugin_instantiate_with_params()
	* implemented ags_lv2ui_plugin_instantiate_with_params()
	* refactored AgsLv2Bridge and AgsLiveLv2Bridge
	* improved AgsAudioApplicationContext and AgsXorgApplicationContext
	* improved lv2 plugin set flag AGS_LV2_PLUGIN_IS_SYNTHESIZER as parsing names

gs (2.2.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reenabled sync counter increment before decrement fixes a race condition

ags (2.2.16)
