@@ -1,8 +1,12 @@
 ags (2.2.23)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: improved replacing hard-coded font
+	* improved replacing hard-coded font
 	* refactored AgsDial to use PangoLayout
+	* refactored AgsLevel to use PangoLayout
+	* refactored AgsScale to use PangoLayout
+	* refactored AgsRuler to use PangoLayout
+	* refactored AgsCartesian to use PangoLayout
 
 ags (2.2.22)
 
